# streaming-rs

./: Cargo.toml  README.md
src/: cors.rs  main.rs  parse.rs  statics.rs  stream.rs  upload.rs  utils.rs
src/statics/assets/: main.js
statics/assets/: upload.js  video.js
statics/html/: index.html  upload.html  watch.html
