[package]
name = "stream-rs"
version = "0.1.0"
authors = ["Maximo Fernandez <maxfer1221@gmail.com>"]
description = "Video streaming"
liscence = "MIT"
repository = "https://github.com/maxfer1221/stream-rs"
readme = "README.md"
keywords = ["video streaming", "webserver", "server"]
edition = "2018"

[dependencies]
tiny_http = "0.9.0"

